[package]
name = "bench-forgejo"
description = "Shared Forgejo end-to-end fixture library for Bench"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
