[package]
name = "bench-forgejo"
description = "Shared Forgejo end-to-end fixture library for Bench"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
# HTTP via skein's own client (no reqwest/tokio/hyper): a tiny blocking helper
# drives skein's async HttpClient on a one-shot current-thread runtime. The
# version check is a small loopback GET; the binary download raises the client's
# max_body_size to accept the ~100 MB asset.
skein = { git = "http://127.0.0.1:3000/ai/skein.git", rev = "d2c98ecbad0825cdfef7feeb58f1e7f7e4f4d853", features = ["tls", "tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
